--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -6,7 +13,6 @@ html {
 html > body {
   margin: 0;
   height: 100%;
-  overflow: hidden;
 }
 
 html > body > header {
@@ -16,6 +22,7 @@ html > body > header {
 
 html > body > header > nav.gnb {
   height: 100%;
+  overflow: hidden;
 }
 
 html > body > header > nav.gnb > div.menu {
@@ -43,24 +50,37 @@ nav.gnb > .gnb-menu {
 }
 
 nav.gnb > .gnb-menu a#blue-gnb, nav.gnb > .gnb-menu a#pink-gnb {
+  position: relative;
   display: block;
   height: 50%;
   cursor: pointer;
 }
 
-nav.gnb > .gnb-menu a#blue-gnb:after, nav.gnb > .gnb-menu a#pink-gnb:after {
-  content: url(/Practice-2019/Jungle-Academy/portfolio1/img/bg_mnavi_p.png);
-}
-
 nav.gnb > .gnb-menu a#blue-gnb span, nav.gnb > .gnb-menu a#pink-gnb span {
-  display: inline-block;
-  width: 84px;
-  letter-spacing: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: block;
+  width: 80px;
+  letter-spacing: 9px;
   font-size: 20px;
   font-weight: bold;
-  text-align: center;
   color: #FFFFFF;
   line-height: 1.5em;
+}
+
+nav.gnb > .gnb-menu a#blue-gnb span:after, nav.gnb > .gnb-menu a#pink-gnb span:after {
+  content: url(../img/bg_mnavi_p.png);
+  width: 10px;
+  height: 17px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding-top: 10px;
 }
 
 nav.gnb > .gnb-menu a#blue-gnb {
@@ -240,5 +260,184 @@ nav.gnb > div.menu.students.menu-active {
 
 .hide {
   opacity: 0;
+}
+
+.intro-1 {
+  background: wheat;
+  position: absolute;
+  width: 100%;
+  font-family: 'Gothic A1', sans-serif;
+  top: 0;
+  height: 960px;
+}
+
+.intro-1 .logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 180px;
+  height: 80px;
+  z-index: 5;
+}
+
+.intro-1 .left {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0%;
+  left: 0%;
+}
+
+.intro-1 .left > div {
+  position: absolute;
+  top: 50%;
+  margin-left: 120px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 400px;
+  height: 430px;
+}
+
+.intro-1 .right {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0%;
+  left: 50%;
+}
+
+.intro1-bg.bg1 > .bg-img {
+  position: absolute;
+  bottom: 0%;
+  left: 43%;
+}
+
+.intro1-bg.bg1 > .left {
+  background: #C9EBF7;
+}
+
+.intro1-bg.bg1 > .left h2 {
+  font-size: 50px;
+  font-weight: lighter;
+}
+
+.intro1-bg.bg1 > .left h2 strong {
+  color: #085EA9;
+}
+
+.intro1-bg.bg1 > .left p {
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  margin-top: 40px;
+}
+
+.intro1-bg.bg1 > .left > div > div {
+  margin-top: 40px;
+}
+
+.intro1-bg.bg1 > .left > div > div img {
+  margin-right: 20px;
+}
+
+.intro1-bg.bg1 > .right {
+  background: #ECEDEF;
+}
+
+.intro1-bg.bg2 > .bg-img {
+  position: absolute;
+  bottom: 0%;
+  left: 30%;
+}
+
+.intro1-bg.bg2 > .left {
+  background: #F2D6D5;
+}
+
+.intro1-bg.bg2 > .left h2 {
+  font-size: 48px;
+  font-weight: lighter;
+}
+
+.intro1-bg.bg2 > .left h2 strong {
+  color: #D93F75;
+}
+
+.intro1-bg.bg2 > .left p {
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  margin-top: 40px;
+}
+
+.intro1-bg.bg2 > .left > div > div {
+  margin-top: 40px;
+}
+
+.intro1-bg.bg2 > .left > div > div img {
+  margin-right: 20px;
+}
+
+.intro1-bg.bg2 > .right {
+  background: #ECEDEF;
+}
+
+.intro1-bg.bg3 > .bg-img {
+  position: absolute;
+  bottom: 0%;
+  left: 43%;
+}
+
+.intro1-bg.bg3 > .left {
+  background: #BAEBF0;
+}
+
+.intro1-bg.bg3 > .left > div {
+  width: 550px;
+  height: 500px;
+}
+
+.intro1-bg.bg3 > .left > div h2 {
+  font-size: 50px;
+  font-weight: lighter;
+}
+
+.intro1-bg.bg3 > .left > div h2 strong {
+  color: #127D84;
+}
+
+.intro1-bg.bg3 > .left > div p {
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  margin-top: 40px;
+}
+
+.intro1-bg.bg3 > .left > div img {
+  margin-top: 20px;
+}
+
+.intro1-bg.bg3 > .right {
+  background: #ECEDEF;
+}
+
+.intro1-bg.bg4 > .bg-img {
+  position: absolute;
+  bottom: 0%;
+  margin-left: 20px;
+}
+
+.intro1-bg.bg4 > .left {
+  background: #D7DFF8;
+}
+
+.intro1-bg.bg4 > .right {
+  background: #ECEDEF;
+}
+
+.intro1-bg.bg4 > img + img {
+  position: absolute;
+  top: 270px;
+  margin-left: 600px;
 }
 /*# sourceMappingURL=main.css.map */
