desktop일 때 나란히 되도록

--- a/Jungle-Academy/level2-memo/assets/memo.css
+++ b/Jungle-Academy/level2-memo/assets/memo.css
@@ -157,10 +157,10 @@ section.memo-show .memo-body {
   height: 125px;
   border: 1px solid #c4c4c4;
   border-radius: 10px;
-  -webkit-transition: opacity .5s, -webkit-box-shadow .5s;
-  transition: opacity .5s, -webkit-box-shadow .5s;
-  transition: box-shadow .5s, opacity .5s;
-  transition: box-shadow .5s, opacity .5s, -webkit-box-shadow .5s;
+  -webkit-transition: -webkit-box-shadow .5s;
+  transition: -webkit-box-shadow .5s;
+  transition: box-shadow .5s;
+  transition: box-shadow .5s, -webkit-box-shadow .5s;
 }
 
 section.memo-show .memo-body:hover, section.memo-show .memo-body[hover] {
@@ -246,6 +246,8 @@ section.memo-show .memo-body div.memo-mid-icons a.input-icon {
   text-align: center;
   width: 15%;
   margin: 0;
+  -webkit-transition: opacity .5s;
+  transition: opacity .5s;
 }
 
 section.memo-show .memo-body div.memo-mid-icons a.input-icon:hover {
@@ -283,6 +285,8 @@ section.memo-show .memo-body div.btn-set button {
     height: auto;
     overflow: hidden;
     position: relative;
+    width: 100%;
+    max-width: calc(100% - 80px);
   }
   section.memo-show .memo-body:hover {
     -webkit-box-shadow: none;
