--- a/Jungle-Academy/level2-memo/assets/memo.scss
+++ b/Jungle-Academy/level2-memo/assets/memo.scss
@@ -166,19 +166,12 @@ section.memo-show {
     height: 125px;
     border: 1px solid rgb(196, 196, 196);
     border-radius: 10px;
-    transition: box-shadow .5s, opacity .5s;
-    //opacity 적용안됌
-    //미드아이콘은 오퍼시티를 적용해서 사르륵 열리게 하면됌
-
-    // &[open] memo-write memo-body와 동일하게
+    transition: box-shadow .5s;
 
 
     &:hover, &[hover] {
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 3px 3px rgba(0, 0, 0, 0.1);
 
-      .fixed-icon {
-        // opacity: 1;
-      }
       div.memo-mid-icons {
         opacity: 1;
 
@@ -248,7 +241,7 @@ section.memo-show {
       width: 100%;
       text-align: center;
       margin-top: 5px;
-
+      
       a.input-icon {
         
         &:hover {
@@ -260,6 +253,7 @@ section.memo-show {
         text-align: center;
         width: 15%;
         margin: 0;
+        transition: opacity .5s;
 
         i {
           font-size: 15px;
@@ -298,9 +292,10 @@ section.memo-show {
       height: auto;
       overflow: hidden;
       position: relative;
-
+      width: 100%;
+      max-width: calc(100% - 80px);
+      
       &:hover {
-        //박스 쉐도우 확인필요
         box-shadow: none;
       }
 
