header 확인 및 백그라운드 만들기

--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -38,6 +38,7 @@ html > body > header > nav.gnb > div.menu > .menu-body {
 
 nav.gnb {
   position: relative;
+  z-index: 998;
 }
 
 nav.gnb > .gnb-menu {
