--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 html {
   width: 100%;
   height: 100%;
@@ -58,14 +51,17 @@ nav.gnb > .gnb-menu a#blue-gnb, nav.gnb > .gnb-menu a#pink-gnb {
 }
 
 nav.gnb > .gnb-menu a#blue-gnb span, nav.gnb > .gnb-menu a#pink-gnb span {
+  display: block;
+  width: 95px;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  display: block;
-  width: 80px;
   letter-spacing: 9px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-left: 4.5px;
   font-size: 20px;
   font-weight: bold;
   color: #FFFFFF;
@@ -90,6 +86,10 @@ nav.gnb > .gnb-menu a#blue-gnb {
 
 nav.gnb > .gnb-menu a#pink-gnb {
   background-color: #E7437D;
+}
+
+nav.gnb > div.menu {
+  position: fixed;
 }
 
 nav.gnb > div.menu .btnBox {
@@ -123,26 +123,26 @@ nav.gnb > div.menu .btnBox > a.closeBtn > img {
 }
 
 nav.gnb > div.menu .main-body {
-  height: 480px;
-  margin: 0 180px 0 40px;
+  height: 500px;
+  margin-left: 80px;
   clear: both;
 }
 
-nav.gnb > div.menu .main-body > h2.headerLogo {
+nav.gnb > div.menu .main-body > .headerLogo {
   font-size: 28px;
   font-weight: bold;
   text-align: center;
   line-height: 1.7em;
-  word-spacing: 7px;
+  letter-spacing: 15px;
   float: left;
   margin: 0;
 }
 
 nav.gnb > div.menu .main-body > .gnbMenu {
   height: 100%;
-  float: right;
+  float: left;
   width: 1230px;
-  margin: 0 auto;
+  margin-left: 140px;
   overflow: auto;
 }
 
@@ -211,15 +211,13 @@ nav.gnb > div.menu .main-body > .gnbMenu ul.contents-buttom {
 }
 
 nav.gnb > div.menu div.snb {
-  margin-top: 50px;
+  margin-top: 100px;
   overflow: hidden;
 }
 
 nav.gnb > div.menu div.snb > .snb-center {
   width: 410px;
-  margin-left: 590px;
-  overflow: hidden;
-  float: left;
+  margin: 0 auto;
 }
 
 nav.gnb > div.menu div.snb > .snb-center > a.snb-btn {
@@ -231,8 +229,8 @@ nav.gnb > div.menu div.snb > .snb-center > a.snb-btn {
 
 nav.gnb > div.menu div.snb a.snb-right-btn {
   display: block;
-  float: right;
-  margin-right: 200px;
+  float: left;
+  margin-left: 300px;
 }
 
 nav.gnb > div.menu.parents {
