--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -36,7 +36,7 @@ nav.gnb {
 
 nav.gnb > .gnb-menu {
   position: fixed;
-  width: 120px;
+  width: 140px;
   right: 0;
   left: auto;
   height: 100%;
@@ -52,16 +52,16 @@ nav.gnb > .gnb-menu a#blue-gnb, nav.gnb > .gnb-menu a#pink-gnb {
 
 nav.gnb > .gnb-menu a#blue-gnb span, nav.gnb > .gnb-menu a#pink-gnb span {
   display: block;
-  width: 95px;
+  width: 85px;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  letter-spacing: 9px;
+  letter-spacing: 6px;
+  margin-left: -3px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-left: 4.5px;
   font-size: 20px;
   font-weight: bold;
   color: #FFFFFF;
@@ -270,10 +270,18 @@ nav.gnb > div.menu.students.menu-active {
   height: 960px;
 }
 
+.intro-1 .intro1-bg {
+  display: none;
+}
+
+.intro-1 .intro1-bg.show {
+  display: block;
+}
+
 .intro-1 .logo {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 20px;
+  left: 30px;
   width: 180px;
   height: 80px;
   z-index: 5;
@@ -289,10 +297,8 @@ nav.gnb > div.menu.students.menu-active {
 
 .intro-1 .left > div {
   position: absolute;
-  top: 50%;
-  margin-left: 120px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 200px;
+  margin-left: 270px;
   width: 400px;
   height: 430px;
 }
@@ -346,7 +352,7 @@ nav.gnb > div.menu.students.menu-active {
 .intro1-bg.bg2 > .bg-img {
   position: absolute;
   bottom: 0%;
-  left: 30%;
+  left: 35%;
 }
 
 .intro1-bg.bg2 > .left {
@@ -384,7 +390,7 @@ nav.gnb > div.menu.students.menu-active {
 .intro1-bg.bg3 > .bg-img {
   position: absolute;
   bottom: 0%;
-  left: 43%;
+  left: 44.5%;
 }
 
 .intro1-bg.bg3 > .left {
@@ -423,7 +429,7 @@ nav.gnb > div.menu.students.menu-active {
 .intro1-bg.bg4 > .bg-img {
   position: absolute;
   bottom: 0%;
-  margin-left: 20px;
+  margin-left: 120px;
 }
 
 .intro1-bg.bg4 > .left {
@@ -436,7 +442,7 @@ nav.gnb > div.menu.students.menu-active {
 
 .intro1-bg.bg4 > img + img {
   position: absolute;
-  top: 270px;
-  margin-left: 600px;
+  top: 300px;
+  margin-left: 730px;
 }
 /*# sourceMappingURL=main.css.map */
