--- a/Jungle-Academy/portfolio2/css/header-and-footer-style.css
+++ b/Jungle-Academy/portfolio2/css/header-and-footer-style.css
@@ -708,5 +708,6 @@ div.logo-Top {
   line-height: 55px;
   font-size: 10px;
   text-align: center;
+  cursor: pointer;
 }
 /*# sourceMappingURL=header-and-footer-style.css.map */
