--- a/study/20190514실습/css/mobile-join.scss
+++ b/study/20190514실습/css/mobile-join.scss
@@ -6,7 +6,7 @@ section, footer {
 }
 
 header {
-  position: fixed;
+  position: absolute;
   top: 0px;
   width: 100%;
   height: 90px;
@@ -120,13 +120,6 @@ article {
     float: left;
     width: 30%;
     font-size: 14px;
-    
-    &[for="mail-accept"], &[for="sms-accept"] {
-      height: 30px;
-      background: wheat;
-      width: 70%;
-    }
-
   }
 
   input {
@@ -134,9 +127,5 @@ article {
     height: 35px;
     border: 1px solid #e5e5e5;
     outline: none;
-
-    &[type="checkbox"] {
-      width: 15px;
-    }
   }
 }
