--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -25,6 +25,7 @@ html > body > header > nav.gnb > div.menu {
 }
 
 html > body > header > nav.gnb > div.menu > .menu-body {
+  position: fixed;
   overflow: hidden;
   height: 100%;
 }
@@ -52,20 +53,21 @@ nav.gnb > .gnb-menu a#blue-gnb, nav.gnb > .gnb-menu a#pink-gnb {
 
 nav.gnb > .gnb-menu a#blue-gnb span, nav.gnb > .gnb-menu a#pink-gnb span {
   display: block;
-  width: 85px;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   letter-spacing: 6px;
-  margin-left: -3px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 3px;
   font-size: 20px;
   font-weight: bold;
   color: #FFFFFF;
   line-height: 1.5em;
+  text-align: center;
 }
 
 nav.gnb > .gnb-menu a#blue-gnb span:after, nav.gnb > .gnb-menu a#pink-gnb span:after {
@@ -234,7 +236,7 @@ nav.gnb > div.menu div.snb a.snb-right-btn {
 }
 
 nav.gnb > div.menu.parents {
-  position: absolute;
+  position: fixed;
   left: 100%;
   background-color: #1E75A8;
   -webkit-transition: left .5s;
@@ -246,7 +248,7 @@ nav.gnb > div.menu.parents.menu-active {
 }
 
 nav.gnb > div.menu.students {
-  position: absolute;
+  position: fixed;
   left: 100%;
   background-color: #E7437D;
   -webkit-transition: left .5s;
@@ -261,21 +263,39 @@ nav.gnb > div.menu.students.menu-active {
   opacity: 0;
 }
 
-.intro-1 {
-  background: wheat;
-  position: absolute;
-  width: 100%;
+section {
   font-family: 'Gothic A1', sans-serif;
-  top: 0;
+}
+
+.intro-1 {
+  background: #fff;
+  position: absolute;
+  top: 0%;
+  width: 100%;
   height: 960px;
+  overflow: hidden;
 }
 
-.intro-1 .intro1-bg {
-  display: none;
+.intro-1 .intro-right-bg {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  right: 0%;
+  bottom: 0%;
+  background: #ECEDEF;
 }
 
-.intro-1 .intro1-bg.show {
-  display: block;
+.intro-1 .intro1-wrap {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: top .5s;
+  transition: top .5s;
+}
+
+.intro-1 .intro1-wrap.show {
+  top: 0%;
 }
 
 .intro-1 .logo {
@@ -311,119 +331,110 @@ nav.gnb > div.menu.students.menu-active {
   left: 50%;
 }
 
-.intro1-bg.bg1 > .bg-img {
+.intro-1 .bg-img {
   position: absolute;
+}
+
+.intro1.bg1 > .bg-img {
   bottom: 0%;
   left: 43%;
 }
 
-.intro1-bg.bg1 > .left {
+.intro1.bg1 > .left {
   background: #C9EBF7;
 }
 
-.intro1-bg.bg1 > .left h2 {
+.intro1.bg1 > .left h2 {
   font-size: 50px;
   font-weight: lighter;
 }
 
-.intro1-bg.bg1 > .left h2 strong {
+.intro1.bg1 > .left h2 strong {
   color: #085EA9;
 }
 
-.intro1-bg.bg1 > .left p {
+.intro1.bg1 > .left p {
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 1px;
   margin-top: 40px;
 }
 
-.intro1-bg.bg1 > .left > div > div {
+.intro1.bg1 > .left > div > div {
   margin-top: 40px;
 }
 
-.intro1-bg.bg1 > .left > div > div img {
+.intro1.bg1 > .left > div > div img {
   margin-right: 20px;
 }
 
-.intro1-bg.bg1 > .right {
-  background: #ECEDEF;
-}
-
-.intro1-bg.bg2 > .bg-img {
+.intro1.bg2 > .bg-img {
   position: absolute;
   bottom: 0%;
   left: 35%;
 }
 
-.intro1-bg.bg2 > .left {
+.intro1.bg2 > .left {
   background: #F2D6D5;
 }
 
-.intro1-bg.bg2 > .left h2 {
+.intro1.bg2 > .left h2 {
   font-size: 48px;
   font-weight: lighter;
 }
 
-.intro1-bg.bg2 > .left h2 strong {
+.intro1.bg2 > .left h2 strong {
   color: #D93F75;
 }
 
-.intro1-bg.bg2 > .left p {
+.intro1.bg2 > .left p {
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 1px;
   margin-top: 40px;
 }
 
-.intro1-bg.bg2 > .left > div > div {
+.intro1.bg2 > .left > div > div {
   margin-top: 40px;
 }
 
-.intro1-bg.bg2 > .left > div > div img {
+.intro1.bg2 > .left > div > div img {
   margin-right: 20px;
 }
 
-.intro1-bg.bg2 > .right {
-  background: #ECEDEF;
-}
-
-.intro1-bg.bg3 > .bg-img {
+.intro1.bg3 > .bg-img {
   position: absolute;
   bottom: 0%;
   left: 44.5%;
 }
 
-.intro1-bg.bg3 > .left {
+.intro1.bg3 > .left {
   background: #BAEBF0;
 }
 
-.intro1-bg.bg3 > .left > div {
+.intro1.bg3 > .left > div {
   width: 550px;
   height: 500px;
 }
 
-.intro1-bg.bg3 > .left > div h2 {
+.intro1.bg3 > .left > div h2 {
   font-size: 50px;
   font-weight: lighter;
 }
 
-.intro1-bg.bg3 > .left > div h2 strong {
+.intro1.bg3 > .left > div h2 strong {
   color: #127D84;
 }
 
-.intro1-bg.bg3 > .left > div p {
+.intro1.bg3 > .left > div p {
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 1px;
   margin-top: 40px;
 }
 
-.intro1-bg.bg3 > .left > div img {
+.intro1.bg3 > .left > div img {
   margin-top: 20px;
-}
-
-.intro1-bg.bg3 > .right {
-  background: #ECEDEF;
 }
 
 .intro1-bg.bg4 > .bg-img {
@@ -436,13 +447,287 @@ nav.gnb > div.menu.students.menu-active {
   background: #D7DFF8;
 }
 
-.intro1-bg.bg4 > .right {
-  background: #ECEDEF;
-}
-
 .intro1-bg.bg4 > img + img {
   position: absolute;
   top: 300px;
   margin-left: 730px;
+}
+
+section, article, div, p, span, h1, h2, h3, a {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.style-introduce {
+  padding-top: 150px;
+  padding-bottom: 180px;
+  background-image: url(../img/hero/img_parallax01_2.png), url(../img/hero/img_parallax02_2.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 0px 0px, 600px 550px;
+}
+
+.style-introduce article {
+  width: 930px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.style-introduce article div {
+  width: 465px;
+  float: left;
+}
+
+.style-introduce article .style-text-box {
+  height: 370px;
+  margin-top: 120px;
+  padding-left: 120px;
+}
+
+.style-introduce article .style-text-box:first-child {
+  padding-left: 0px;
+}
+
+.style-introduce article .style-text-box p {
+  font-size: 75px;
+  color: #252A2E;
+}
+
+.style-introduce article .style-text-box p span {
+  display: block;
+  color: #E2487E;
+}
+
+.style-introduce article .style-text-box p + p {
+  margin-top: 50px;
+  font-size: 20px;
+  color: #252A2E;
+}
+
+.center-line {
+  position: relative;
+  display: block;
+  width: auto;
+  height: 0px;
+}
+
+.center-line:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  width: 1px;
+  height: 160px;
+  background-color: #8C9196;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.look-book {
+  height: 1152px;
+  background: #F3F5F6;
+  padding: 150px 0px 60px 0px;
+}
+
+.look-book > div {
+  width: 1200px;
+  overflow: hidden;
+  margin: 0px auto;
+}
+
+.look-book > div h2 {
+  float: left;
+  font-size: 50px;
+  font-weight: normal;
+}
+
+.look-book > div h2 span {
+  display: block;
+  font-weight: bold;
+}
+
+.look-book > div .look-book-btn {
+  float: right;
+  width: 350px;
+}
+
+.look-book > div .look-book-btn a {
+  display: inline-block;
+  margin-right: 90px;
+  padding-bottom: 10px;
+  font-size: 20px;
+  color: #9D9D9D;
+  border-bottom: 2px solid #9D9D9D;
+}
+
+.look-book > div .look-book-btn a:last-child {
+  margin-right: 0px;
+}
+
+.look-book > div .look-book-btn a:hover {
+  color: #272D31;
+}
+
+.look-book .list-wrap {
+  height: 701px;
+  position: relative;
+}
+
+.look-book .list-wrap .list {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.look-book .list-wrap .list.on {
+  opacity: 1;
+}
+
+.look-book .list-wrap .list > div {
+  padding-left: 350px;
+  white-space: nowrap;
+}
+
+.look-book .list-wrap .list > div img {
+  width: 500px;
+}
+
+.look-book .buttons {
+  width: 100%;
+  text-align: center;
+}
+
+.look-book .buttons > a:hover, .look-book .buttons > a:focus {
+  color: #3E4347;
+}
+
+.look-book .buttons .prev-btn {
+  margin-right: 30px;
+}
+
+.center-line.sec3-4:after {
+  height: 80px;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+.smart-tv {
+  margin-top: 80px;
+}
+
+.smart-tv span {
+  display: block;
+}
+
+.smart-tv h2 {
+  margin-top: 170px;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.smart-tv h2 span {
+  font-family: sans-serif;
+  font-weight: 100;
+}
+
+.smart-tv article {
+  width: 1200px;
+  height: 678px;
+  margin: 40px auto;
+}
+
+.smart-tv article + article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 440px;
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.smart-tv article + article a {
+  position: relative;
+  background: url(../img/hero/img_smainbanner_01.jpg) no-repeat center top/380px 340px;
+  width: 360px;
+  height: 100%;
+}
+
+.smart-tv article + article a:nth-child(2) {
+  background-image: url(../img/hero/img_smainbanner_02.jpg);
+}
+
+.smart-tv article + article a:last-child {
+  background-image: url(../img/hero/img_smainbanner_03.jpg);
+}
+
+.smart-tv article + article a p {
+  position: absolute;
+  left: 50%;
+  bottom: 0%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 300px;
+  padding: 35px;
+  margin: 0px auto;
+  background: #fff;
+  font-size: 30px;
+}
+
+.smart-tv article + article a p span {
+  font-weight: bold;
+}
+
+footer {
+  height: 350px;
+  background: #272D31;
+  overflow: hidden;
+  color: #F4F4F4;
+}
+
+footer .footer-snb {
+  margin-top: 80px;
+  overflow: hidden;
+}
+
+footer .footer-snb > div {
+  width: 450px;
+  margin: 0 auto;
+}
+
+footer .footer-snb > div > a.snb-btn {
+  display: block;
+  float: left;
+  width: 20%;
+  text-decoration: none;
+}
+
+footer div + div {
+  margin-top: 20px;
+  text-align: center;
+}
+
+footer div + div span {
+  display: inline-block;
+  padding: 5px 10px;
+}
+
+footer p {
+  margin-top: 20px;
+  letter-spacing: 5px;
+  text-align: center;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
