--- a/Jungle-Academy/portfolio1/css/main.scss
+++ b/Jungle-Academy/portfolio1/css/main.scss
@@ -21,6 +21,7 @@ html {
           color: #FFFFFF;
 
           >.menu-body {
+            position: fixed;
             overflow: hidden;
             height: 100%;
           }
@@ -50,18 +51,18 @@ nav.gnb {
 
       span { //완전 가운데로 가지를 않음
         display: block;
-        width: 85px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         letter-spacing: 6px;
-        margin-left: -3px;
-        box-sizing: border-box;
+        width:fit-content;
+        margin-left: 3px;
         font-size: 20px;
         font-weight: bold;
         color: #FFFFFF;
         line-height: 1.5em;
+        text-align: center;
 
 
         &:after {
@@ -231,7 +232,7 @@ nav.gnb {
   }
   
   >div.menu.parents {
-    position: absolute;
+    position: fixed;
     left: 100%;
     background-color: #1E75A8;
     transition: left .5s;
@@ -242,7 +243,7 @@ nav.gnb {
   }
 
   >div.menu.students {
-    position: absolute;
+    position: fixed;
     left: 100%;
     background-color: #E7437D;
     transition: left .5s;
@@ -258,19 +259,37 @@ nav.gnb {
 }
 
 // section
-.intro-1 { //header영역때문에 absolute로 자리잡음
-  background: wheat;
-  position: absolute;
-  width: 100%;
+section {
   font-family: 'Gothic A1', sans-serif;
-  top: 0;
-  height: 960px;
+}
 
-  .intro1-bg {
-    display: none;
+.intro-1 { //header영역때문에 absolute로 자리잡음
+  background: #fff;
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 960px;
+  overflow: hidden;
+
+  .intro-right-bg {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    right: 0%;
+    bottom: 0%;
+    background: #ECEDEF;
   }
-  .intro1-bg.show {
-    display: block;
+
+  .intro1-wrap {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    transition: top .5s;
+
+    &.show {
+      top: 0%;
+    }
   }
 
   .logo {
@@ -305,18 +324,20 @@ nav.gnb {
     top: 0%;
     left: 50%;
   }
+
+  .bg-img {
+    position: absolute;
+  }
 }
 
 // intro-1 bg
-.intro1-bg.bg1 {
+.intro1.bg1 {
   >.bg-img {
-    position: absolute;
     bottom: 0%;
     left: 43%;
   }
   >.left {
     background: #C9EBF7;
-
     h2 {
       font-size: 50px;
       font-weight: lighter;
@@ -338,13 +359,10 @@ nav.gnb {
       }
     }
   }
-  >.right {
-    background: #ECEDEF;
-  }
 }
 
 
-.intro1-bg.bg2 {
+.intro1.bg2 {
   >.bg-img {
     position: absolute;
     bottom: 0%;
@@ -372,12 +390,9 @@ nav.gnb {
       }
     }
   }
-  >.right {
-    background: #ECEDEF;
-  }
 }
 
-.intro1-bg.bg3 {
+.intro1.bg3 {
   >.bg-img {
     position: absolute;
     bottom: 0%;
@@ -407,9 +422,6 @@ nav.gnb {
       }
     }
   }
-  >.right {
-    background: #ECEDEF;
-  }
 }
 
 .intro1-bg.bg4 {
@@ -421,12 +433,289 @@ nav.gnb {
   >.left {
     background: #D7DFF8;
   }
-  >.right {
-    background: #ECEDEF;
-  }
   >img+img {
     position: absolute;
     top: 300px;
     margin-left: 730px;
+  }
+}
+
+//section2
+
+section,article,div,p,span,h1,h2,h3,a {
+  margin: 0; padding: 0; box-sizing: border-box;
+}
+a {text-decoration: none; color: inherit;}
+
+.style-introduce {
+  //background 어떻게
+  padding-top: 150px;
+  padding-bottom: 180px;
+  background-image: url(../img/hero/img_parallax01_2.png), url(../img/hero/img_parallax02_2.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 0px 0px, 600px 550px;
+  
+
+
+  article {
+    width: 930px;
+    margin: 0 auto;
+    overflow: hidden;
+
+    div {
+      width: 465px;
+      float: left;
+    }
+
+    .style-text-box {
+      height: 370px;
+      margin-top: 120px;
+      padding-left: 120px;
+
+      &:first-child {
+        padding-left: 0px;
+      }
+
+      p {
+        font-size: 75px;
+        color: #252A2E;
+
+        span {
+          display: block;
+          color: #E2487E;
+        }
+      }
+
+      p+p {
+        margin-top: 50px;
+        font-size: 20px;
+        color: #252A2E;
+      }
+    }
+  }
+}
+
+.center-line {
+  position:relative;
+  display: block;
+  width:auto;
+  height:0px;
+  
+  &:after {
+    content: "";
+    display: block;
+    position:absolute;
+    left:50%;
+    width:1px;
+    height: 160px;
+    background-color: #8C9196;
+    transform: translateY(-50%);
+  }
+}
+
+//section3
+.look-book {
+  height: 1152px;
+  //배경이 사실 다른거임
+  background: #F3F5F6;
+  padding: 150px 0px 60px 0px;
+  
+  >div{
+    width: 1200px;
+    overflow: hidden;
+    margin: 0px auto;
+
+    h2 {
+      float: left;
+      font-size: 50px;
+      font-weight: normal;
+      
+
+      span {
+        display: block;
+        font-weight: bold;
+      }
+    }
+
+    .look-book-btn {
+      float: right;
+      width: 350px;
+
+      a {
+        display: inline-block;
+        margin-right: 90px;
+        padding-bottom: 10px;
+        font-size: 20px;
+        color: #9D9D9D;
+        border-bottom: 2px solid #9D9D9D;
+
+        &:last-child{
+          margin-right: 0px;
+        }
+
+        &:hover {
+          //click시 색 바뀜
+          color: #272D31;
+        }
+      }
+    }
+  }
+
+  .list-wrap{
+    height:701px;
+    position: relative;
+
+    .list {
+      position: absolute;
+      top: 0;
+      opacity: 0;
+      transition: all .3s;
+
+      &.on {
+        opacity: 1;
+      }
+
+      >div {
+        padding-left: 350px;
+        white-space: nowrap;
+
+        img {
+          width: 500px;
+        }
+      }
+    }
+  }
+
+  .buttons {
+    width: 100%;
+    text-align: center;
+
+    >a {
+      //이거 왜 안먹힘
+      &:hover, &:focus {
+        color: #3E4347;
+      }
+    }
+
+    .prev-btn {
+      margin-right: 30px;
+    }
+  }
+}
+
+.center-line.sec3-4 {
+  &:after {
+    height: 80px;
+    transform: translateY(0%);
+  }
+}
+
+//section4
+.smart-tv {
+  margin-top: 80px;
+
+  span {
+    display: block;
+  }
+
+  h2 {
+    margin-top: 170px;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+
+    span {
+      font-family: sans-serif;
+      font-weight: 100;
+    }
+  }
+  
+  article {
+    width: 1200px;
+    height: 678px;
+    margin: 40px auto;
+  }
+
+  article+article {
+    display: flex;
+    justify-content: space-between;
+    height: 440px;
+    margin-top: 60px;
+    margin-bottom: 80px;
+
+    a {
+      position: relative;
+      background: url(../img/hero/img_smainbanner_01.jpg) no-repeat center top / 380px 340px;
+      width: 360px;
+      height: 100%;
+
+      &:nth-child(2) {
+        background-image: url(../img/hero/img_smainbanner_02.jpg)
+      }
+
+      &:last-child {
+        background-image: url(../img/hero/img_smainbanner_03.jpg)
+      }
+
+      p {
+        position: absolute;
+        left: 50%;
+        bottom: 0%;
+        transform: translateX(-50%);
+        width: 300px;
+        padding: 35px;
+        margin: 0px auto;
+        background: #fff;
+        font-size: 30px;
+
+        span {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  height: 350px;
+  background: #272D31;
+  overflow: hidden;
+  color: #F4F4F4;
+
+  .footer-snb {
+    margin-top: 80px;
+    overflow: hidden;
+
+    >div {
+      width: 450px;
+      margin: 0 auto;
+
+      >a.snb-btn {
+        display: block;
+        float: left;
+        width: 20%;
+        text-decoration: none;
+      }
+    }
+  }
+
+  div+div {
+    margin-top: 20px;
+    text-align: center;
+
+    span {
+      //adress 색 왜저래
+      display: inline-block;
+      padding: 5px 10px;
+
+    }
+  }
+
+  p {
+    margin-top: 20px;
+    letter-spacing: 5px;
+    text-align: center;
+    text-transform: uppercase;
   }
 }
