--- a/Jungle-Academy/portfolio2/css/ware-valley.css
+++ b/Jungle-Academy/portfolio2/css/ware-valley.css
@@ -370,28 +370,25 @@ h2 {
   margin-bottom: 50px;
 }
 
+section#product .swiper-container {
+  max-width: calc(100% - 40px);
+  width: 1500px;
+  height: 420px;
+}
+
 section#product article {
   max-width: calc(100% - 40px);
   width: 1500px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
-section#product article ul {
-  display: block;
-  height: 400px;
+section#product article .swiper-wrapper .swiper-slide {
   text-align: center;
-}
-
-section#product article ul li {
-  margin-left: 33.3333px;
-  width: 20%;
-  float: left;
   margin: 0 auto;
   height: 100%;
 }
 
-section#product article ul li .image-wrap {
+section#product article .swiper-wrapper .swiper-slide .image-wrap {
   background: #f5f6f8 url(../img/download/common/icon_solutions1.png) center no-repeat/80px 80px;
   width: 200px;
   height: 200px;
@@ -399,20 +396,20 @@ section#product article ul li .image-wrap {
   margin: 0 auto;
 }
 
-section#product article ul li h3 {
+section#product article .swiper-wrapper .swiper-slide h3 {
   padding-top: 30px;
   font-size: 15px;
   color: #333333;
 }
 
-section#product article ul li p {
+section#product article .swiper-wrapper .swiper-slide p {
   padding-top: 5px;
   padding-bottom: 30px;
   font-size: 13px;
   color: #646464;
 }
 
-section#product article ul li a {
+section#product article .swiper-wrapper .swiper-slide a {
   display: block;
   width: 95px;
   height: 40px;
@@ -428,32 +425,40 @@ section#product article ul li a {
   cursor: pointer;
 }
 
-section#product article ul li a:hover {
+section#product article .swiper-wrapper .swiper-slide a:hover {
   background-color: #20242a;
   color: #fff;
 }
 
-section#product article li.chakra-max > .image-wrap {
+section#product article .swiper-pagination {
+  top: 400px;
+}
+
+section#product article .swiper-pagination .swiper-pagination-bullet {
+  margin: 0 5px;
+}
+
+section#product article .swiper-slide.chakra-max > .image-wrap {
   background-image: url(../img/download/common/icon_solutions2.png);
 }
 
-section#product article li.galea > .image-wrap {
+section#product article .swiper-slide.galea > .image-wrap {
   background-image: url(../img/download/common/icon_solutions3.png);
 }
 
-section#product article li.trusted-orange > .image-wrap {
+section#product article .swiper-slide.trusted-orange > .image-wrap {
   background-image: url(../img/download/common/icon_solutions4.png);
 }
 
-section#product article li.orange > .image-wrap {
+section#product article .swiper-slide.orange > .image-wrap {
   background-image: url(../img/download/common/icon_solutions5.png);
 }
 
-section#product article li.petasql > .image-wrap {
+section#product article .swiper-slide.petasql > .image-wrap {
   background-image: url(../img/download/common/icon_solutions6.png);
 }
 
-section#product article li.lora > .image-wrap {
+section#product article .swiper-slide.lora > .image-wrap {
   background-image: url(../img/download/common/icon_solutions7.png);
   background-size: 100px auto;
 }
