슬라이드 넣을수 있으면 넣기

--- a/Jungle-Academy/portfolio1/css/main.css
+++ b/Jungle-Academy/portfolio1/css/main.css
@@ -437,17 +437,17 @@ section {
   margin-top: 20px;
 }
 
-.intro1-bg.bg4 > .bg-img {
+.intro1.bg4 > .bg-img {
   position: absolute;
   bottom: 0%;
   margin-left: 120px;
 }
 
-.intro1-bg.bg4 > .left {
+.intro1.bg4 > .left {
   background: #D7DFF8;
 }
 
-.intro1-bg.bg4 > img + img {
+.intro1.bg4 > img + img {
   position: absolute;
   top: 300px;
   margin-left: 730px;
@@ -688,46 +688,5 @@ a {
 
 .smart-tv article + article a p span {
   font-weight: bold;
-}
-
-footer {
-  height: 350px;
-  background: #272D31;
-  overflow: hidden;
-  color: #F4F4F4;
-}
-
-footer .footer-snb {
-  margin-top: 80px;
-  overflow: hidden;
-}
-
-footer .footer-snb > div {
-  width: 450px;
-  margin: 0 auto;
-}
-
-footer .footer-snb > div > a.snb-btn {
-  display: block;
-  float: left;
-  width: 20%;
-  text-decoration: none;
-}
-
-footer div + div {
-  margin-top: 20px;
-  text-align: center;
-}
-
-footer div + div span {
-  display: inline-block;
-  padding: 5px 10px;
-}
-
-footer p {
-  margin-top: 20px;
-  letter-spacing: 5px;
-  text-align: center;
-  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
