swiper 정사각형으로 줄어들수 있는지 확인

--- a/Jungle-Academy/portfolio2-warevalley/css/ware-valley.css
+++ b/Jungle-Academy/portfolio2-warevalley/css/ware-valley.css
@@ -377,12 +377,13 @@ section#product .swiper-container {
 }
 
 section#product article {
-  max-width: calc(100% - 40px);
+  max-width: 100%;
   width: 1500px;
   margin: 0 auto;
 }
 
 section#product article .swiper-wrapper .swiper-slide {
+  max-width: 100%;
   text-align: center;
   margin: 0 auto;
   height: 100%;
@@ -390,7 +391,8 @@ section#product article .swiper-wrapper .swiper-slide {
 
 section#product article .swiper-wrapper .swiper-slide .image-wrap {
   background: #f5f6f8 url(../img/download/common/icon_solutions1.png) center no-repeat/80px 80px;
-  width: 200px;
+  max-width: calc(100% - 10px);
+  width: 210px;
   height: 200px;
   border-radius: 50%;
   margin: 0 auto;
