--- a/Jungle-Academy/portfolio1-smart/css/main.scss
+++ b/Jungle-Academy/portfolio1-smart/css/main.scss
@@ -163,7 +163,7 @@ nav.gnb {
           p {
             font-size: 12px;
             line-height: 1.5em;
-            margin-top: 20px;;
+            margin-top: 20px;
           }
 
           span {
